lang.java.statics.test/tests/interfaces/subtyping/coercetointerface.no.spt
module interfaces/subtyping/coercetointerface_no

language metaborg-java

test coercetointerface [[

test;



// error: C cannot be converted to I

[A]
public class A implements I {}

[B]
public class B {
    public C c;
    public I m() {
//           new X();
           return this.c;
    }
}

[C]
public class C {}

[I]
public interface I {}


]] analysis fails
   run javacFails to ""
